[package]
name = "rlrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = {version = "0.8.7" }
specs = "0.18.0" # Specs is an Entity-Component-System library written in Rust
specs-derive = "0.4.1" # Custom derive macro for Specs components